--- a/css/styles.css
+++ b/css/styles.css
@@ -1,453 +1,517 @@
 @charset "utf-8";
 /* CSS Document */
 
-/* ====================== General styles ====================== */
-
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-body,td,th,p{
-	font-family: 'Merriweather', serif;
-	font-size: 0.8em;
-	font-weight: 200;
-	color: #373737;
+body,
+td,
+th,
+p,
+span {
+	font-family: "Barlow Condensed", sans-serif;
+	font-weight: 400;
+	font-size: 20px;
+	color: #333;
 	line-height: 1.5;
 }
-
 body {
-	background-color: #f8f8f8;
+	background-color: #fff;
 	margin: 0;
 	position: relative;
-	overflow-x: hidden;
+	color: #1833ab;
+  overflow-x: hidden;
+}
+.home main {
+	margin-top: 3em;
+}
+.inside main {
+	margin-top: 6em;
 }
 
 a {
-	color: #e07800;
 	text-decoration: none;
+	transition: 0.2s;
 }
-
 a:hover, a:focus {
-	color: #ff9800;
 	text-decoration: none;
 }
-
 a img{
-	border: none 0px #000000;
+	border: none 0px #fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Merriweather', serif;
-	font-weight: 600;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: "Barlow Condensed", sans-serif;
+	font-weight: 500;
+  margin: 0 0 1em;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+
+hr {
+	border: none;
+  border-bottom: 0.05em solid #333;
+}
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
+}
+
+header {
+	height: 3em;
+	background-color: #fff;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 99;
+}
+
+#maincontent {
+  background-color: #1833ab;
+  min-height: 100%;
+}
+#footer {
+  background-color: #333;
+  color: #aaa;
+  font-size: 0.5em;
+  letter-spacing: 0.1em;
+  padding: 1em;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .wrapper {
 	width: 100%;
 	margin: 0 auto;
 }
-
-/* ====================== Header ====================== */
-
-header {
-	height: 5em;
-	background-color: #e07800;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	z-index: 99;
+.inside .wrapper {
+  width: 50%;
+  min-width: 320px;
+  margin: 0;
 }
 
-/* Navigation */
+
+/* ====================== Navigation ====================== */
+
 
 nav {
 	height: 100%;
-	text-align: center;
+  text-align: center;
+	color: currentColor;
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: space-between;
 }
-
 .logo {
-	color: white;
+	color: #1833ab;
 }
-
+.logo h1 {
+	font-family: "Montserrat", sans-serif;
+	font-weight: 600;
+	font-size: 1.2em;
+	margin: 0;
+}
 .logo a {
-	color: inherit;
+  color: inherit;
+  text-transform: capitalize;
 	display: inline-flex;
 	align-items: center;
 	padding: 0 1em;
 	height: 100%;
 }
-
-.logo h1 {
-	font-size: 1.6em;
-	letter-spacing: 0.2em;
-	text-transform: uppercase;
-	margin: 0;
-	align-content: center;
-}
-
 .logo:hover {
-	color: #ffdca7;
+	color: #ed1E79
 }
 
-/* Restaurant Filtering */
+
+/* ====================== Restaurant Filtering ====================== */
+
 
 .filter-options {
-	align-items: center;
+  align-items: center;
 	display: inline-flex;
 	float: right;
-	padding-right: 1em;
 }
-
 .filter-options h2 {
-	color: white;
-	font-size: 1.2em;
-	line-height: 1;
-	margin: 0.5em;
+	font-size: 1.1em;
+  line-height: 1;
+  margin: 0 0 0 1em;
 }
-
 .filter-options select {
-	background-color: #ff9800;
-	color: #683800;
-	font-family: 'Merriweather', serif;
-	font-size: 1em;
-	border: 1px solid #ff9800;
-	border-radius: 0.5em;
-	margin: 0 0.5em;
-	padding: 0.5em;
-	width: auto;
+	background-color: #1833ab;
+	color: #fff;
+  font-family: Arial, sans-serif;
+  font-size: 11pt;
+  height: 50%;
+  letter-spacing: 0;
+  margin-left: 1em;
+  padding: 0 0.5em;
+  width: auto;
+	cursor: pointer
+}
+.filter-options select:after {
+	border: 6px solid #fff;
 }
 
 
-/* ====================== Main ====================== */
 
-.main-content {
-	min-height: 100%;
-}
+/* ====================== Map ====================== */
 
-.home main {
-	margin-top: 5em;
-}
-
-/* Map */
 
 #map {
-	height: 300px;
-	width: 100%;
+  height: 400px;
+  width: 100%;
+  background-color: #ccc;
 	z-index: 10;
 }
 
-/* Restaurant Listing */
+/* ====================== Restaurant Listing ====================== */
+
 
 #restaurants-list {
-	background-color: #ffffff;
-	list-style: outside none none;
-	margin: 0;
-	padding: 2em;
+  list-style: outside none none;
+  margin: 0;
+  padding: 1em 0 0 1em;
+  text-align: center;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
-
 #restaurants-list li {
-	border: 1px solid #dcdcdc;
-	background-color: #f8f8f8;
-	margin: 0 0.8em 1.6em 0.8em;
-	padding: 0;
-	width: 270px;
-	border-radius: 0 2em 0 2em;
+  background-color: #fff;
+  font-family: Arial, sans-serif;
+  margin: 0 1em 1em 0;
+  min-height: 380px;
+  padding: 0;
+  text-align: left;
+  width: 280px;
 }
 
-#restaurants-list li a {
-	display: inline-block;
-	text-transform: uppercase;
-}
 
-#restaurants-list li a:hover {
-	background-color: #fff;
-	border-radius: 0 0 0 2em;
-}
-#restaurants-list a:hover .restaurant-name {
-	color: #ff9800;
+/* Restaurant Item */
+
+.restaurant-label {
+	padding: 1em;
 }
 
 #restaurants-list .restaurant-img {
-	display: block;
-	margin: 0;
+  background-color: #ccc;
+  display: block;
+  margin: 0;
 	max-width: 100%;
-	min-width: 100%;
-	border-radius: 0 2em 0 0;
+  min-height: 10em;
+  min-width: 100%;
 }
-
-.restaurant-label {
-	padding: 1em 1.6em;
-	text-align: left;
-	border-radius: 0 0 0 2em;
-	color: #e07800;
-}
-
 #restaurants-list li h1 {
+  color: #fff;
 	font-size: 1.2em;
-	font-weight: 400;
-	line-height: 1.3;
-	margin: 0.5em 0;
-	text-transform: uppercase;
+	font-weight: 600;
+  letter-spacing: 0;
+  line-height: 1.3;
+  margin: 0;
+  text-transform: uppercase;
 }
 
-#restaurants-list p {
-	margin: 0;
-	font-size: 0.8em;
-	font-family: 'Lato', sans-serif;
-}
-
-.restaurant-neighborhood {
+.restaurant-name {
 	font-weight: 600;
 }
-
 .restaurant-address {
 	font-weight: 400;
 	font-size: 0.9em;
 }
-
-hr {
-	border: none;
-	border-bottom: 0.05em solid #979797;
-	margin: 0.5em 0 1em 0;
+#restaurants-list li p {
+  margin: 0;
 }
 
+.cuisine-type,
 .rating {
-	float: left;
-}
-
-.cuisine {
-	float: right;
-	margin: 0 0 1em 0;
-}
-
-/* ====================== Restaurant Details ====================== */
-
-.inside main {
-	margin-top: 3em;
-}
-
-.inside header {
-	height: 2.5em;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 1000;
-	padding-left: 1em;
-}
-
-#maincontent {
-	min-height: 100%;
-}
-
-.inside .wrapper {
-	width: 100%;
-}
-
-.back {
-	color: white;
-}
-
-.back a {
-	color: inherit;
-	display: inline-flex;
 	align-items: center;
-	padding: 0 1em;
+}
+.cuisine-type {
+	font-weight: 300;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	float: right;
+}
+.rating {
+	text-transform: capitalize;
+	font-weight: 500;
+}
+
+#restaurants-list li a {
+  color: #fff;
+  display: inline-block;
+  text-align: left;
+  text-decoration: none;
 	height: 100%;
 }
-
-.back h1 {
-	font-size: 1.6em;
-	letter-spacing: 0.2em;
-	text-transform: uppercase;
-	margin: 0;
-	align-content: center;
+#restaurants-list li a:hover {
+	background-color: #fff;
+}
+#restaurants-list a:hover .restaurant-name {
+  color: #ed1E79;
 }
 
-.logo:hover {
-	color: #ffdca7;
+
+
+
+/* ====================== Cousine Identity ====================== */
+
+
+.asian {
+	background-color: #f53;
+}
+.american {
+	background-color: #0cf;
+}
+.mexican {
+	background-color: #0c4;
+}
+.pizza {
+	background-color: #f93;
 }
 
-/* Restaurant Details Info */
+.asian-color {
+	color: #f53;
+}
+.american-color {
+	color: #0cf;
+}
+.mexican-color {
+	color: #0c4;
+}
+.pizza-color {
+	color: #f93;
+}
 
+
+
+/* ====================== Restaurant Details ====================== */
+.breadcrumbs {
+  background-color: #eee;
+  height: 3em;
+  display: inline-flex;
+  align-items: center;
+}
+
+#breadcrumb {
+  align-items: center;
+  display: inline-flex;
+	color: #fff;
+  list-style: none;
+  font-size: 1em;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+
+#breadcrumb li {
+  display: inline;
+  background-color: #1833ab;
+  padding: 0.2em 1em 0.3em 0.5em;
+  border-radius: 0.25em 2em 2em 0.25em;
+}
+#breadcrumb li:first-child {
+  margin: 0 0.5em 0 1em;
+}
+#breadcrumb li a {
+  color: #fff;
+  text-decoration: none;
+}
+#breadcrumb li a:hover {
+  color: #ed1E79;
+}
+
+#restaurant-container,
+#reviews-container {
+  padding: 1em;
+}
+#restaurant-container h2,
+#reviews-container h2 {
+  color: #333;
+  text-transform: uppercase;
+}
+
+
+/* Restaurant Name & Rating */
+
+.restaurant-header {
+  display: flex;
+  flex-wrap: wrap;
+	justify-content: space-between;
+  margin-bottom: 1em;
+  align-items: center;
+}
 #restaurant-name {
-	color: #e07800;
-	font-weight: 200;
-	letter-spacing: 0;
-	text-transform: uppercase;
-	line-height: 1.1;
+  font-weight: 600;
+  margin: 0 0.5em 0 0;
+  text-transform: uppercase;
+}
+.inside .rating {
+  color: #1833ab;
+  padding: 0.1em 0.4em;
+  margin: 0.5em 0;
+  border-radius: 0.5em;
 }
 
-#restaurant-neighborhood {
-	text-align: left;
-	line-height: 1.5;
-	color: #373737;
-	font-size: 0.8em;
-	font-family: 'Lato', sans-serif;
-	font-weight: 600;
-	text-transform: uppercase;
-	margin: 0;
-}
 
-#restaurant-address {
-	text-align: left;
-	line-height: 1.5;
-	color: #373737;
-	font-size: 0.8em;
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	text-transform: uppercase;
-	margin: 0 0 1em 0;
-}
+/* Restaurant Info */
 
-#restaurant-cuisine {
-	margin: 0 0 1em;
-	text-align: left;
-	color: #e07800;
-	text-transform: uppercase;
-	float: left;
+.restaurant-info {
+  background-color: #fff;
+  display: flex;
+  flex-wrap: wrap;
 }
-
-#restaurant-rating {
-	float: right;
-	color : #666;
-	font-size: 0.8em;
-	font-weight: 600;
-	text-transform: uppercase;
+.restaurant-details,
+.open-hours,
+.reviews {
+  background-color: #fff;
+  padding: 1em;
+}
+.open-hours {
+  margin-top: 2em;
+}
+.restaurant-details p,
+.restaurant-details h2 {
+  margin: 0;
+}
+.restaurant-details hr {
+  margin-bottom: 1em;
 }
 
 #restaurant-img {
 	width: 100%;
+  height: 30vh;
+  background-repeat: no-repeat, repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
-.open-hours {
-	margin-top: 1em;
+#restaurant-address {
+  margin: 0.5em 0 1em;
 }
 
-.open-hours h2 {
-	font-size: 1.2em;
-	margin: 0;
+.inside .cuisine-type {
+  float: left;
+  color: #fff;
+  padding: 0.2em 0.4em;
+  border-radius: 0.25em;
+  margin-top: 0.25em;
 }
 
-#restaurant-container, #reviews-container {
-	border-bottom: 0.05em solid #979797;
-	padding: 1em 2em;
-	width: 50%;
-}
 
-/* Reviews Listing */
 
-#reviews-container {
-	background-color: white;
-}
-
-#reviews-container h2 {
-	font-size: 1.2em;
-}
-
-#reviews-list {
-	margin: 0;
-	padding: 0;
-}
-
-#reviews-list li {
-	display: block;
-	list-style-type: none;
-	margin: 0 0 2em;
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-	border-bottom: 0.05em solid #979797;
-}
-
-#reviews-list li p {
-	margin: 0 0 10px;
-	display: block;
-}
+/* Restaurant Open Hours */
 
 #restaurant-hours td {
-	color: #666;
+  font-weight: 400;
+  font-size: 0.8em;
+  color: #333;
+  padding-right: 1em;
+}
+#restaurant-hours tr td:first-of-type {
+  font-weight: 500;
+  text-transform: uppercase;
+}
+#restaurant-hours tr td:first-of-type:after {
+  content: ":";
 }
 
-#restaurant-hours tr td:first-of-type {
-    font-weight: 600;
-		padding-right: 2em;
+/* Restaurant Reviews */
+
+#reviews-list {
+  margin: 0;
+  padding: 0;
 }
+#reviews-list li {
+  border-bottom: 2px solid #f3f3f3;
+  display: block;
+  list-style-type: none;
+  margin: 0 0 1em;
+  overflow: hidden;
+  padding: 0.5em 0 1em;
+  position: relative;
+  width: 100%;
+}
+#reviews-list li:last-child {
+  border: none;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+#reviews-list li p {
+  margin: 0 0 0.25em;
+}
+
 
 .review-heading {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-	align-items: flex-end;
 }
-
 .review-heading .name {
-	margin: 0 0 1em;
-	text-align: left;
-	font-size: 1.2em;
-	color: #e07800;
-	text-transform: uppercase;
+  font-size: 1.2em;
+  color: #1833ab;
 }
-
 .review-heading .date {
   font-size: 0.8em;
-  color: #373737;
+  color: #333;
   font-weight: 300;
 }
+
 
 #reviews-list .rating {
   font-size: 0.8em;
   display: inline-block;
-	text-transform: uppercase;
-	font-weight: 600;
-	width: 100%;
+  color: #fff;
+  background-color: #999;
 }
-
 #reviews-list .comment {
-  margin-bottom: 2em;
+  line-height: 1.2;
+  margin-top: 0.5em;
+  font-size: 0.9em;
 }
 
-/* Map */
 
+/* Restaurant Map & Pinned Location */
 .inside #map-container {
-	background: white none repeat scroll 0 0;
-	height: 100%;
-	position: fixed;
-	right: 0;
-	top: 2.5em;
-	width: 50%;
-	z-index: 10;
+  background: #ccc none repeat scroll 0 0;
+  height: 100%;
+  position: fixed;
+  left: 50%;
+  top: 3em;
+  width: 50%;
+  float: right;
+}
+.inside #map {
+  background-color: #ccc;
+  height: calc(100vh - 3em);
+  width: 100%;
 }
 
-.inside #map {
-	background-color: white;
-	height: calc(100vh - 3em);
-	width: 100%;
-	margin: 0;
-}
+
 
 /* ====================== Footer ====================== */
 
-#footer {
-	background-color: #f8f8f8;
-	color: #683800;
-	font-size: 8pt;
-	letter-spacing: 1px;
-	padding: 25px;
-	text-align: center;
-}
 
-.inside #footer {
-	font-size: 8pt;
-	bottom: 0;
-	position: absolute;
-	width: 50%;
+#footer a {
+  color: #fff;
+}
+#footer a:hover {
+  color: #ed1E79;
 }
